--- a/css.css
+++ b/css.css
@@ -13,7 +13,7 @@ header {
 
 .navbar {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     list-style: none;
     padding: 0;
     margin: 0;
@@ -23,7 +23,7 @@ header {
     font-size: 18px;
     padding: 10px 15px;
     border: 2px solid white;
-    border-radius: 5px;
+    border-radius: 10px;
     background-color: #333;
     margin: 0 10px;
 }
